# nice_prompt

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  logging.rs  main.rs  util.rs
src/prompts/: dir.rs  git.rs  mod.rs
src/tests/: mod.rs
