[package]
name = "nice_prompt"
version = "0.1.0"
authors = ["Samyak Ahuja <samyak.mcs18.du@gmail.com>"]
edition = "2018"
repository = "https://github.com/samyakahuja/nice_prompt"
keywords = ["prompt", "shell", "bash"]
categories = ["command-line-utilities"]
description = "Minimal prompt for shell"
license = "MIT"

[dependencies]
git2 = "0.13.6"
ansi_term = "0.12.1"
itertools = "0.9.0"
dirs = "3.0.1"

[dev-dependencies]
temp_testdir = "0.2.3"
